--- a/cyrobuf/protobuf/templates/proto_c.tmpl
+++ b/cyrobuf/protobuf/templates/proto_c.tmpl
@@ -142,7 +142,7 @@ int
                 {{ field.name }}_elt = *({{ field.c_type }} *)(buffer + *offset);
                 *offset += sizeof({{ field.c_type }});
                 {%- elif field.var_width == true %}
-                if ({{ field.getter }}({{ field.name }}_elt, buffer, max_offset, offset) != 0) {
+                if ({{ field.getter }}(({{ field.getter_type }} *){{ field.name }}_elt, buffer, max_offset, offset) != 0) {
                     return 1;
                 }
                 {%- endif %}
@@ -181,7 +181,7 @@ int
             *offset += sizeof({{ field.c_type }});
 
                 {%- elif field.var_width == true %}
-            if ({{ field.getter }}(&{{ field.name }}_elt, buffer, max_offset, offset) != 0) {
+            if ({{ field.getter }}(({{ field.getter_type }} *)&{{ field.name }}_elt, buffer, max_offset, offset) != 0) {
                 return 1;
             }
             {{ field.list_type }}_append(&message->{{ field.name }}, {{ field.name }}_elt);
@@ -214,7 +214,7 @@ int
             *offset += field_size;
 
         {%- elif field.type == 'enum' %}
-            if ({{ field.getter }}(&message->{{ field.name }}, buffer, max_offset, offset) != 0) {
+            if ({{ field.getter }}(({{ field.getter_type }} *)&message->{{ field.name }}, buffer, max_offset, offset) != 0) {
                 return 1;
             }
 
@@ -223,7 +223,7 @@ int
             *offset += sizeof({{ field.c_type }});
 
         {%- elif field.var_width == true %}
-            if ({{ field.getter }}(&message->{{ field.name }}, buffer, max_offset, offset) != 0) {
+            if ({{ field.getter }}(({{ field.getter_type }} *)&message->{{ field.name }}, buffer, max_offset, offset) != 0) {
                 return 1;
             }
 
