--- a/cyrobuf/protobuf/templates/proto_c.tmpl
+++ b/cyrobuf/protobuf/templates/proto_c.tmpl
@@ -136,6 +136,9 @@ int
                 return 1;
             }
             {{ field.name }}_marker += *offset;
+            if ({{ field.name }}_marker > max_offset) {
+                return 1;
+            }
 
             while (*offset < {{ field.name }}_marker) {
                 {%- if field.fixed_width == true %}
@@ -154,11 +157,16 @@ int
             if (get_varint64((int64_t *)&field_size, buffer, max_offset, offset) != 0) {
                 return 1;
             }
-            {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_parse_from_string({{ field.name }}_elt, buffer, *offset + field_size, offset);
+            if ({% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_parse_from_string({{ field.name }}_elt, buffer, *offset + field_size, offset) != 0) {
+                return 1;
+            }
             {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_list_append_unsafe(&message->{{ field.name }}, {{ field.name }}_elt);
 
                 {%- elif field.type == 'string' %}
             if (get_varint64((int64_t *)&field_size, buffer, max_offset, offset) != 0) {
+                return 1;
+            }
+            if (*offset + field_size > max_offset) {
                 return 1;
             }
             {{ field.name }}_elt = strndup((char *)(buffer + *offset), field_size);
@@ -169,6 +177,9 @@ int
             if (get_varint64((int64_t *)&field_size, buffer, max_offset, offset) != 0) {
                 return 1;
             }
+            if (*offset + field_size > max_offset) {
+                return 1;
+            }
             {{ field.name }}_elt = calloc(1, sizeof(struct cyrobuf_bytes) + field_size);
             {{ field.name }}_elt->len = field_size;
             memcpy({{ field.name }}_elt->data, (buffer + *offset), field_size);
@@ -176,6 +187,9 @@ int
             *offset += field_size;
 
                 {%- elif field.fixed_width == true %}
+            if (*offset + sizeof({{ field.c_type }}) > max_offset) {
+                return 1;
+            }
             {{ field.name }}_elt = *({{ field.c_type }} *)(buffer + *offset);
             {{ field.list_type }}_append(&message->{{ field.name }}, {{ field.name }}_elt);
             *offset += sizeof({{ field.c_type }});
@@ -195,10 +209,15 @@ int
             if (get_varint64((int64_t *)&field_size, buffer, max_offset, offset) != 0) {
                 return 1;
             }
-            {% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_parse_from_string(message->{{ field.name }}, buffer, *offset + field_size, offset);
+            if ({% if field.is_nested %}{{ name }}{% endif %}{{ field.message_name }}_parse_from_string(message->{{ field.name }}, buffer, *offset + field_size, offset) != 0) {
+                return 1;
+            }
 
         {%- elif field.type == 'string' %}
             if (get_varint64((int64_t *)&field_size, buffer, max_offset, offset) != 0) {
+                return 1;
+            }
+            if (*offset + field_size > max_offset) {
                 return 1;
             }
             message->{{ field.name }} = strndup((char *)(buffer + *offset), field_size);
@@ -206,6 +225,9 @@ int
 
         {%- elif field.type == 'bytes' %}
             if (get_varint64((int64_t *)&field_size, buffer, max_offset, offset) != 0) {
+                return 1;
+            }
+            if (*offset + field_size > max_offset) {
                 return 1;
             }
             message->{{ field.name }} = calloc(1, sizeof(struct cyrobuf_bytes) + field_size);
@@ -219,6 +241,9 @@ int
             }
 
         {%- elif field.fixed_width == true %}
+            if (*offset + sizeof({{ field.c_type }}) > max_offset) {
+                return 1;
+            }
             message->{{ field.name }} = *({{ field.c_type }} *)(buffer + *offset);
             *offset += sizeof({{ field.c_type }});
 
